<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context=".ui.activity.onboarding.OnBoardingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/logoIv"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toStartOf="@id/buttonSkip"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

        <TextView
            android:id="@+id/buttonSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/avenir_heavy"
            android:padding="10dp"
            android:text="@string/skip"
            android:textColor="#4A90E2"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

        <View
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@color/primary_200"
            app:layout_constraintEnd_toEndOf="@id/logoIv"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/logoIv" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/dotsIndicator"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/logoIv" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dotsIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:dotsColor="#D8D8D8"
            app:dotsCornerRadius="8dp"
            app:dotsSize="10dp"
            app:dotsSpacing="5dp"
            app:dotsWidthFactor="2.5"
            app:layout_constraintBottom_toTopOf="@id/buttonNext"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:progressMode="true"
            app:selectedDotColor="#78C239" />

        <Button
            android:id="@+id/buttonNext"
            style="@style/Button.Large"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/avenir_regular"
            android:text="@string/next"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>